--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,6 +47,8 @@ const pageDescription = "Learn about Luna Station Press and our mission to publi
                       src={taraPhoto.src} 
                       alt="Photo of Tara Quinn Lindsey" 
                       class="h-72 object-cover"
+                      loading="lazy"
+                      decoding="async"
                     />
                   </div>
                   
@@ -86,6 +88,8 @@ const pageDescription = "Learn about Luna Station Press and our mission to publi
                       src={jenniferPhoto.src} 
                       alt="Photo of Jennifer Lyn Parsons" 
                       class="h-72 object-cover"
+                      loading="lazy"
+                      decoding="async"
                     />
                   </div>
                   
