--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -50,7 +50,7 @@ const pageDescription = "Latest news and updates from Luna Station Press";
       <PageHeader title="News from the Station" subtitle="Notes, Musings & The Latest Scoop on all things LSP!" backgroundImage="/images/bg_071.jpg" />
 
       <section class="py-16">
-        <div class="container mx-auto px-4 max-w-7xl">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-6xl">
           <div class="flex flex-col lg:flex-row gap-8">
             <!-- Main Content -->
             <main class="flex-1 lg:w-2/3">
