--- a/src/pages/blog/archive/[year]/[month]/[...page].astro
+++ b/src/pages/blog/archive/[year]/[month]/[...page].astro
@@ -70,13 +70,13 @@ const pageDescription = `Blog posts from ${archiveTitle}`;
       <PageHeader title={`${archiveTitle} Archives`} backgroundImage="/images/bg_071.jpg" />
 
       <section class="py-16">
-        <div class="container mx-auto px-4 max-w-7xl">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 max-w-6xl">
           <div class="flex flex-col lg:flex-row gap-8">
             <!-- Main Content -->
             <main class="flex-1 lg:w-2/3">
               <div class="space-y-12">
                 {
-                  posts.map((post) => (
+                  posts.map((post: any) => (
                     <article class="border-b border-gray-200 pb-8 last:border-b-0">
                       <div class="flex items-start gap-4">
                         <!-- Comment icon (matching screenshot) -->
