--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import SocialMediaIcon from "./SocialMediaIcon.astro";
 
 ---
 
-<footer class="bg-black text-white relative overflow-hidden" role="contentinfo">
+<footer class="bg-black dark:bg-gray-950 text-white relative overflow-hidden" role="contentinfo">
   <!-- Background pattern -->
   <div class="absolute inset-0 opacity-5">
     <div class="w-full h-full" style="background-image: url('/images/bg_031.png'); background-repeat: repeat;"></div>
